--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:theme="@style/Theme.Material3.DayNight"/>
+            android:theme="@style/MainTheme"/>
         <activity
             android:name=".SplashScreen"
             android:exported="true"
